docs(API spec): adjust base on best practice
